# pantheon

./: .codeqlignore  .env.example  .gitignore  .mcp.json  .npmignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  _debug_forget.py  agents  alembic.ini  biome.json  cliff.toml  commitlint.config.cjs  docker-compose.yml  mkdocs.yml  opencode.json  package-lock.json  package.json  pantheon-5.0.0.tgz  pantheon-orchestrator-1.0.12.tgz  pantheon.schema.json  plugin.json  pyproject.toml  release_notes.md  routing.yml  skills-lock.json  sync-claude.sh  sync-cline.sh  sync-continue.sh  sync-cursor.sh  sync-opencode.sh  sync-platform.sh  sync-windsurf.sh  tsconfig.json  xx00  (+1 more)
.claude/: settings.json
.clinerules/: agora  aphrodite  apollo  athena  chiron  demeter  echo  gaia  hephaestus  hermes  iris  mnemosyne  nyx  prometheus  talos  themis  zeus
.continue/: config.yaml
.cursor/: mcp.json
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  release-drafter.yml
.playwright-mcp/: page-2026-07-23T13-25-01-844Z.yml  page-2026-07-23T13-25-09-809Z.yml  page-2026-07-23T13-32-11-369Z.yml  page-2026-07-23T13-32-23-572Z.yml
agents/: README.md  agora.agent.md  aphrodite.agent.md  apollo.agent.md  argus.agent.md  artemis.agent.md  athena.agent.md  auto-continue-template.md  chiron.agent.md  demeter.agent.md  echo.agent.md  eco.agent.md  gaia.agent.md  hefesto.agent.md  hephaestus.agent.md  hermes.agent.md  iris.agent.md  maat.agent.md  mnemosyne.agent.md  nix.agent.md  nyx.agent.md  observer.agent.md  prometheus.agent.md  quiron.agent.md  ra.agent.md  remote-sensing-expert.agent.md  talos.agent.md  temis.agent.md  themis.agent.md  zeus.agent.md
alembic/: env.py
backend/: database.py
commands/: cancel-relentless.md  cancel.md  commands.json  forge.md  metamorphosis.md  mirrordeps.md  pantheon-bg.md  pantheon-consolidate.md  pantheon-deepwork.md  pantheon-doc.md  pantheon-focus.md  pantheon-forge.md  pantheon-hash.md  pantheon-manifest.md  pantheon-optimize.md  pantheon-remember.md  pantheon-sketch.md  pantheon-todo.md  pantheon-update.md  pantheon.md  ping.md  praxis.md  stop-continuation.md  subtask.md
docs/: AGENT-MCP.md  AGENT-RESEARCH-OPTIMIZATION.md  AGENT-RESEARCH-TIMEOUT-QUICK-REF.md  ARCHITECTURE.md  BRANCH-PROTECTION.md  INDEX.md  INSTALLATION.md  MCP.md  MEMORY.md  PLATFORMS.md  (+12 more)
(+850 files in other folders)
